IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1/11/15: IMOD 4-8-17
1/10/15: Various PEET interface changes.

1/10/15: Fixed bug in Imodauto if there are empty boundary contours (In 4.7).

1/8/15: Make Boxstartend fill to mean of existing data when extracting only
one slice per point.

1/8/15: Added a script Rawtomocoords to compute positions in the raw tilt
series, projection angles, and defocus for points marked in a tomogram.

1/3/15: Implemented a dynamic adjustment of maximum strip width in
Ctfphaseflip to minimize artifactual rings of low values around the zeros in
the power spectrum.  Spacing between strips is increased between wider strips
at low tilt, and the default spacing value in the .com file was reduced to
compensate for this change.

1/3/15: Fixed error in the last interpolation region between strips in 
Ctfphaseflip (In 4.7).

1/3/15: Ctfplotter changes:
  Added option to fit a polynomial to make the power spectrum become flat at
  high frequencies.
  Made the CTF-like curve be fit with two exponentials when the fitting range
  extends past halfway between second and third zero.
  Smoothed noise power spectra to reduce noise added by subtracting them.
  Made the default power for the CTF-like curve be 1.5
  Applied more constraints in the CTF-like fitting to prevent bad fits.
  Improved initial scaling of display.
  Added command-line options for setting the baseline fitting order to
  extend the initial the fitting range beyond the second zero.

1/3/15: Added script imoduntar for listing or untarring a file, to use on
Windows without Cygwin.

1/3/15: Added option to Newstack to shift images with phase shifts in Fourier
space instead of with interpolation.

12/16/14: Add option to Sirtsetup to set number of chunks per processor.

12/4/14: Made Processchunks give an error with more than 100,000 chunks.

11/28/14: Various fixes related to model Z coordinates starting at -0.5